# speed-daemon

./: .coveragerc  .gitignore  .travis.yml  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  run_speedtest.sh
speed-daemon/: app.py
speed_daemon/: app.py  data.py  visualize.py
tests/: test_app.py  test_data.py  test_speed_daemon.py
