[tool.poetry]
name = "speed-daemon"
version = "0.0.1-pre"
description = "\"A process to monitor network bandwidth.\""
authors = ["Alex C. Viana <alexcostaviana@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.3"
streamlit = "^0.69.2"
matplotlib = "^3.3.2"
seaborn = "^0.11.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
