[tool.poetry]
name = "speed-daemon"
version = "0.0.1-pre"
description = "\"A process to monitor network bandwidth.\""
authors = ["Alex C. Viana <alexcostaviana@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.3"
pycparser = "^2.20"
cffi = "^1.14.3"
py = "^1.9.0"
SQLAlchemy = "^1.3.22"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
pytest = "^7.0.1"
pytest-coverage = "^0.0"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
